; ModuleID = '/home/carl/AnghaBench/git/extr_quote.c_perl_quote_buf.c'
source_filename = "/home/carl/AnghaBench/git/extr_quote.c_perl_quote_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @perl_quote_buf(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  store i8 39, i8* %5, align 1
  store i8 92, i8* %6, align 1
  %8 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %9 = call i32 @strbuf_addch(%struct.strbuf* %8, i8 signext 39)
  br label %10

10:                                               ; preds = %26, %2
  %11 = load i8*, i8** %4, align 8
  %12 = getelementptr inbounds i8, i8* %11, i32 1
  store i8* %12, i8** %4, align 8
  %13 = load i8, i8* %11, align 1
  store i8 %13, i8* %7, align 1
  %14 = icmp ne i8 %13, 0
  br i1 %14, label %15, label %30

15:                                               ; preds = %10
  %16 = load i8, i8* %7, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 39
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i8, i8* %7, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 92
  br i1 %22, label %23, label %26

23:                                               ; preds = %19, %15
  %24 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %25 = call i32 @strbuf_addch(%struct.strbuf* %24, i8 signext 92)
  br label %26

26:                                               ; preds = %23, %19
  %27 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %28 = load i8, i8* %7, align 1
  %29 = call i32 @strbuf_addch(%struct.strbuf* %27, i8 signext %28)
  br label %10

30:                                               ; preds = %10
  %31 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %32 = call i32 @strbuf_addch(%struct.strbuf* %31, i8 signext 39)
  ret void
}

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
